k8s-appdeployment/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/subnets: subnet-014ecb8f61552ca2a, subnet-0a1780eece524e7fa
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"alb.ingress.kubernetes.io/scheme":"internet-facing","alb.ingress.kubernetes.io/subnets":"subnet-014ecb8f61552ca2a, subnet-0a1780eece524e7fa","kubernetes.io/ingress.class":"alb"},"creationTimestamp":"2021-05-12T19:38:17Z","generation":1,"name":"nginx-ingress","namespace":"default","resourceVersion":"178327","selfLink":"/apis/extensions/v1beta1/namespaces/default/ingresses/nginx-ingress","uid":"11abac96-b2bb-46 [...]
    kubernetes.io/ingress.class: alb
  creationTimestamp: "2021-05-16T15:37:56Z"
  generation: 1
  name: nginx-ingress
  namespace: default
  resourceVersion: "1551538"
  selfLink: /apis/extensions/v1beta1/namespaces/default/ingresses/nginx-ingress
  uid: 4857b2fd-c691-4d89-88ea-b3ab540eae05
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: nginx-service
          servicePort: 80
        path: /*
        pathType: ImplementationSpecific
status:
  loadBalancer:
    ingress:
    - hostname: daf8978f-default-nginxingr-29e9-1399566496.us-east-2.elb.amazonaws.com
