k8s-appdeployment/nginx-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  creationTimestamp: "2021-05-15T13:19:19Z"
  generation: 1
  labels:
    app: nginx-dep
  name: nginx-dep
  namespace: default
  resourceVersion: "1158628"
  selfLink: /apis/apps/v1/namespaces/default/deployments/nginx-dep
  uid: 97f68bf3-34a9-444e-aa86-8b4d24414f67
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: nginx-dep
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/restartedAt: "2021-05-15T13:05:55Z"
      creationTimestamp: null
      labels:
        app: nginx-dep
    spec:
      containers:
      - image: vel123/nginx:2.0
        imagePullPolicy: Always
        name: nginx
        resources:
          limits:
            cpu: "1"
            memory: 512Mi
          requests:
            cpu: 500m
            memory: 128Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /var/log/nginx/
          name: nginx-log
        - mountPath: /etc/nginx/conf.d/
          name: config-volume
      - env:
        - name: FLUENT_ELASTICSEARCH_HOST
          value: elasticsearch-master.logging.svc.cluster.local
        - name: FLUENT_ELASTICSEARCH_PORT
          value: "9200"
        - name: FLUENT_ELASTICSEARCH_SCHEME
          value: http
        - name: FLUENTD_SYSTEMD_CONF
          value: disable
        - name: FLUENTD_ARGS
          value: -c /etc/fluentd-config/fluentd.conf
        image: k8s.gcr.io/fluentd-gcp:1.30
        imagePullPolicy: IfNotPresent
        name: fluentd
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /etc/fluentd-config
          name: cmap-volume
        - mountPath: /var/log/nginx
          name: nginx-log
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - configMap:
          defaultMode: 420
          name: nginx
        name: config-volume
      - emptyDir: {}
        name: nginx-log
      - configMap:
          defaultMode: 420
          name: fluentd-config
        name: cmap-volume
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2021-05-15T13:19:21Z"
    lastUpdateTime: "2021-05-15T13:19:21Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: "2021-05-15T13:19:19Z"
    lastUpdateTime: "2021-05-15T13:19:21Z"
    message: ReplicaSet "nginx-dep-7958ff44c6" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  observedGeneration: 1
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
